--- a/deno.json
+++ b/deno.json
@@ -1,9 +1,10 @@
 {
   "imports": {
-    "hono": "jsr:@hono/hono@^4.11.3"
+    "hono": "jsr:@hono/hono@^4.11.3",
+    "postgres": "jsr:@db/postgres@^0.19.5"
   },
   "tasks": {
-    "start": "deno run --allow-net main.ts"
+    "start": "deno run --allow-net --allow-read --allow-env main.ts"
   },
   "compilerOptions": {
     "jsx": "precompile",
