chore: update submodule

--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,8 @@
 {
   "imports": {
     "hono": "jsr:@hono/hono@^4.11.3",
-    "postgres": "jsr:@db/postgres@^0.19.5"
+    "postgres": "jsr:@db/postgres@^0.19.5",
+    "argon2": "https://deno.land/x/argon2@v0.9.2/mod.ts"
   },
   "tasks": {
     "start": "deno run --allow-net --allow-read --allow-env main.ts"
