Add logger middleware to Hono app

--- a/deno.json
+++ b/deno.json
@@ -8,7 +8,7 @@
     "zod": "npm:zod@^4.3.5"
   },
   "tasks": {
-    "start": "deno run --allow-net --allow-read --allow-env main.ts"
+    "start": "deno run --allow-net --allow-read --allow-env --allow-ffi main.ts"
   },
   "compilerOptions": {
     "jsx": "precompile",
