--- a/deno.json
+++ b/deno.json
@@ -5,10 +5,12 @@
     "@sitnik/nanoid": "jsr:@sitnik/nanoid@^5.1.5",
     "hono": "jsr:@hono/hono@^4.11.3",
     "postgres": "jsr:@db/postgres@^0.19.5",
-    "zod": "npm:zod@^4.3.5"
+    "zod": "npm:zod@^4.3.5",
+    "$std/assert": "https://deno.land/std@0.208.0/assert/mod.ts"
   },
   "tasks": {
-    "start": "deno run --allow-net --allow-read --allow-env --allow-ffi main.ts"
+    "start": "deno run --allow-net --allow-read --allow-env --allow-ffi main.ts",
+    "test": "deno test --allow-env --allow-read --allow-ffi"
   },
   "compilerOptions": {
     "jsx": "precompile",
