更新 CLAUDE.md 和 config.example.json，添加 JWT 认证功能文档

--- a/config.example.json
+++ b/config.example.json
@@ -5,5 +5,9 @@
     "database": "blog_db",
     "user": "postgres",
     "password": "your_password"
+  },
+  "jwt": {
+    "secret": "your-secret-key-change-in-production",
+    "expiresIn": "7d"
   }
 }
